Before super examples for java 22